[package]
name = "serial-enedis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://crates.io/crates/serialport
# serialport = { version= "4.2.0", default-features = false }

# https://crates.io/crates/serial
# serial-unix = "0.4"

# https://crates.io/crates/termios
termios = "0.3.3"
nix = "0.25.0"

[[bin]]
name = "serial"
path = "src/serial/main.rs"